<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vwPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".secondaryActivities.MovimentacaoActivity">

    <ToggleButton
        android:id="@+id/tb_movimentacao_estado_mercadoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:checked="true"
        android:textOff="@string/toggleOff"
        android:textOn="@string/toggleOn"
        android:textSize="18dp"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/ll_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tb_movimentacao_estado_mercadoria"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:gravity="bottom|start">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/lblQuantidade"
            android:textSize="20dp"
            android:paddingBottom="8dp"
            android:gravity="bottom"/>

        <EditText
            android:id="@+id/et_movimentacao_qtde"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:inputType="numberDecimal" />

        <CheckBox
            android:id="@+id/chkAutoBarCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/autoBarCode"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_6"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_movimentacao_cod_referencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

        <ImageButton
            android:id="@+id/ib_movimentacao_barcode"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_barcode_1" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_movimentacao_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_7"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/btn_default"
        android:text="@string/btnEnviar" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/divider"
        android:layout_below="@+id/bt_movimentacao_enviar"/>

    <ListView
        android:id="@+id/lv_movimentacao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:divider="@color/divider"
        android:dividerHeight="1dp"
        android:layout_below="@id/divider"
        android:layout_above="@id/et_movimentacao_pesquisa_produto"/>

    <EditText
        android:id="@+id/et_movimentacao_pesquisa_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:hint="Pesquisar Produto"
        android:inputType="textPersonName" />

</RelativeLayout>