<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vwPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".secondaryActivities.InventarioActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ToggleButton
        android:id="@+id/tb_movimentacao_estado_mercadoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:checked="true"
        android:textOff="@string/toggleOff"
        android:textOn="@string/toggleOn"
        android:background="@color/toggleOn"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tb_movimentacao_estado_mercadoria"
        android:layout_margin="16dp"
        android:gravity="bottom|start"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="bottom"
            android:paddingBottom="8dp"
            android:text="@string/lblQuantidade"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_movimentacao_qtde"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:inputType="numberDecimal" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chkAutoBarCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/autoBarCode"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_6"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_movimentacao_cod_referencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_movimentacao_barcode"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_barcode_1" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_movimentacao_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_7"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/btn_default"
        android:text="@string/btnEnviar" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/bt_movimentacao_enviar"
        android:layout_marginTop="8dp"
        android:background="@color/divider" />

    <ListView
        android:id="@+id/lv_movimentacao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_pesquisa"
        android:layout_below="@id/divider"
        android:layout_margin="16dp"
        android:divider="@color/divider"
        android:dividerHeight="1dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_pesquisa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_movimentacao_pesquisa_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:hint="Pesquisar Produto"
            android:inputType="textCapCharacters" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_movimentacao_pesquisa_produto"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_search_black_24dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>